[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "django_health_checker"
author = "Ihor Voronin"
author-email = "VoroninIhor@gmail.com"
home-page = "https://github.com/ihor-voronin/health-checker-django"
requires = [
    "drf-spectacular>=0.17.2",
    "django>=3.2",
    "djangorestframework>=3.10.0",
]
requires-python = ">=3.9"
description-file="README.md"